--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
 		"eslint-plugin-mdx": "^2.1.0",
 		"eslint-plugin-react": "^7.32.1",
 		"jest": "29.0.0",
-		"tps-test-3rd-party-package": "github:marcellino-ornelas/tps-test-3rd-party-package",
 		"ttypescript": "^1.5.15",
 		"typescript-transform-paths": "^3.4.6"
 	},
@@ -80,11 +79,13 @@
 		"dot": "1.1.2",
 		"filenamify": "2.1.0",
 		"find-up": "3.0.0",
+		"global-modules": "^2.0.0",
 		"inflection": "^2.0.1",
 		"inquirer": "6.2.2",
 		"is": "3.3.0",
 		"memfs": "^4.2.1",
 		"minimatch": "3.0.4",
+		"npm-paths": "^2.0.0",
 		"prettier": "^3.0.3",
 		"prettyjson-256": "1.5.18",
 		"strip-ansi": "6.0.0",
