--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"is": "3.3.0",
 		"memfs": "^4.2.1",
 		"minimatch": "3.0.4",
+		"npm-paths": "^2.0.0",
 		"prettier": "^3.0.3",
 		"prettyjson-256": "1.5.18",
 		"strip-ansi": "6.0.0",
