install types/bluebird

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	},
 	"devDependencies": {
 		"@docusaurus/eslint-plugin": "^2.4.1",
+		"@types/bluebird": "^3.5.5",
 		"@types/dot": "^1.1.5",
 		"@types/inquirer": "^9.0.3",
 		"@types/is": "^0.0.21",
