--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -2,6 +2,14 @@
 	// This file is not used in compilation. It is here just for a nice editor experience.
 	"extends": "@tsconfig/docusaurus/tsconfig.json",
 	"compilerOptions": {
-		"baseUrl": "."
-	}
+		"baseUrl": ".",
+		"paths": {
+			"@tps/*": ["../src/*"],
+			"@templates/*": ["../.tps/*"],
+		},
+	},
+	"include": [
+		"../src/**/*.ts",
+		"../.tps/**/*",
+	]
 }
