--- a/docs/package.json
+++ b/docs/package.json
@@ -39,6 +39,7 @@
 		"@docusaurus/eslint-plugin": "^2.4.1",
 		"@docusaurus/module-type-aliases": "2.4.1",
 		"@tsconfig/docusaurus": "^1.0.5",
+		"docusaurus-plugin-module-alias": "^0.0.2",
 		"eslint": "^8.43.0",
 		"eslint-plugin-react": "^7.32.2",
 		"typescript": "^4.7.4"
