--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -3,6 +3,7 @@
 	"extends": "@tsconfig/docusaurus/tsconfig.json",
 	"compilerOptions": {
 		"baseUrl": ".",
+		"module": "Node16",
 		"paths": {
 			"@tps/*": ["../src/*"],
 		},
