--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -12,9 +12,6 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./docs
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -38,9 +35,18 @@ jobs:
         name: List the state of node modules
         continue-on-error: true
         run: npm list
-      - name: Install dependencies
+
+      - name: Build templates
+        run: |
+          npm install --frozen-lockfile
+          npm run build
+
+      - name: Install docs dependencies
+        working-directory: ./docs
         run: npm install --frozen-lockfile
-      - name: Build website
+
+      - name: Build docs website
+        working-directory: ./docs
         run: npm run build
 
       # Popular action to deploy to GitHub Pages:
