--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
 	"name": "templates-mo",
-	"version": "1.0.27",
+	"version": "1.1.0",
 	"description": "Templates is a powerful filesystem generator that aims to simplify the process of getting started with and maintaining code applications",
 	"main": "lib/templates/index.js",
 	"keywords": [
-		"template",
-		"templates",
+		"web",
+		"tool",
+		"scaffold",
+		"boilerplate",
 		"generator",
 		"generate",
-		"react",
-		"typescript",
+		"template",
+		"templates",
+		"build-tools",
+		"tps",
 		"cli",
 		"library",
 		"starter",
-		"node"
+		"node",
+		"cli-app",
+		"cli",
+		"front-end",
+		"development",
+		"dev",
+		"build",
+		"stack",
+		"app",
+		"react",
+		"typescript",
+		"yargs"
 	],
 	"repository": {
 		"type": "git",
