--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"moduleResolution": "node",
 		"module": "CommonJS",
 		"esModuleInterop": true,
-		"target": "es5",
+		"target": "ES6",
 		"baseUrl": ".",
 		"paths": {
 			"@tps/*": ["./src/*"],
