--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
 		"minimatch": "^9.0.5",
 		"npm-paths": "^2.0.0",
 		"prettier": "^3.0.3",
-		"prettyjson-256": "1.5.18",
+		"prettyjson-256": "^1.6.5",
 		"strip-ansi": "6.0.0",
 		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.4",
