--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
 	},
 	"dependencies": {
 		"@types/yargs": "^17.0.24",
-		"ansi-colors": "4.1.1",
+		"ansi-colors": "^4.1.3",
 		"bluebird": "^3.7.2",
 		"change-case": "^4.1.2",
 		"cosmiconfig": "^9.0.0",
