--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,6 +63,22 @@ jobs:
         run: |
           npm run lint
 
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18
+      - name: Npm Install
+        run: npm install
+      - name: Npm Install docs
+        run: npm install --prefix docs
+      - name: Test Code
+        run: |
+          npm run format
+
   typecheck:
     runs-on: ubuntu-latest
     strategy:
