--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -75,7 +75,7 @@ jobs:
         run: npm install
       - name: Run Formatter check
         run: |
-          npm run format:check
+          npm run format
 
   typecheck:
     runs-on: ubuntu-latest
