--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,9 +66,8 @@ jobs:
   format:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js 18
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v1
         with:
           node-version: 18
       - name: Npm Install
