--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
 		"babel-eslint": "10.0.3",
 		"eslint": "^8.32.0",
 		"eslint-config-airbnb": "19.0.4",
-		"eslint-config-prettier": "8.6.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-babel-module": "5.3.2",
 		"eslint-import-resolver-typescript": "^3.5.3",
 		"eslint-plugin-import": "2.27.5",
