--- a/package.json
+++ b/package.json
@@ -78,10 +78,10 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-babel-module": "5.3.2",
 		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "2.27.5",
+		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-jest": "27.2.1",
-		"eslint-plugin-jsx-a11y": "6.7.1",
-		"eslint-plugin-mdx": "^2.1.0",
+		"eslint-plugin-jsx-a11y": "^6.9.0",
+		"eslint-plugin-mdx": "^3.1.5",
 		"eslint-plugin-react": "^7.34.3",
 		"jest": "29.0.0",
 		"prettier": "^3.3.2",
