--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
 		"@types/is": "^0.0.21",
 		"@types/jest": "^29.2.6",
 		"@types/node": "^20.14.10",
-		"@typescript-eslint/eslint-plugin": "^5.48.2",
-		"@typescript-eslint/parser": "^5.48.2",
+		"@typescript-eslint/eslint-plugin": "^7.15.0",
+		"@typescript-eslint/parser": "^7.15.0",
 		"babel-eslint": "10.0.3",
 		"eslint": "^8.32.0",
 		"eslint-config-airbnb": "19.0.4",
@@ -79,7 +79,7 @@
 		"eslint-import-resolver-babel-module": "5.3.2",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jest": "27.2.1",
+		"eslint-plugin-jest": "^28.6.0",
 		"eslint-plugin-jsx-a11y": "^6.9.0",
 		"eslint-plugin-mdx": "^3.1.5",
 		"eslint-plugin-react": "^7.34.3",
