--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
 	"devDependencies": {
 		"@docusaurus/eslint-plugin": "^2.4.1",
 		"@types/bluebird": "^3.5.42",
-		"@types/dot": "^1.1.5",
+		"@types/dot": "^1.1.7",
 		"@types/inquirer": "^9.0.3",
 		"@types/is": "^0.0.21",
 		"@types/jest": "^29.2.6",
@@ -95,7 +95,7 @@
 		"change-case": "^4.1.2",
 		"cosmiconfig": "^9.0.0",
 		"debug": "4.1.1",
-		"dot": "1.1.2",
+		"dot": "^1.1.3",
 		"find-up": "3.0.0",
 		"inflection": "^2.0.1",
 		"inquirer": "6.2.2",
