--- a/package.json
+++ b/package.json
@@ -64,47 +64,46 @@
 	},
 	"devDependencies": {
 		"@docusaurus/eslint-plugin": "^2.4.1",
-		"@types/bluebird": "^3.5.5",
-		"@types/dot": "^1.1.5",
+		"@types/bluebird": "^3.5.42",
+		"@types/dot": "^1.1.7",
 		"@types/inquirer": "^9.0.3",
 		"@types/is": "^0.0.21",
 		"@types/jest": "^29.2.6",
-		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "^5.48.2",
-		"@typescript-eslint/parser": "^5.48.2",
+		"@types/node": "^20.14.10",
+		"@typescript-eslint/eslint-plugin": "^7.15.0",
+		"@typescript-eslint/parser": "^7.15.0",
 		"babel-eslint": "10.0.3",
 		"eslint": "^8.32.0",
 		"eslint-config-airbnb": "19.0.4",
-		"eslint-config-prettier": "8.6.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-babel-module": "5.3.2",
-		"eslint-import-resolver-typescript": "^3.5.3",
-		"eslint-plugin-import": "2.27.5",
-		"eslint-plugin-jest": "27.2.1",
-		"eslint-plugin-jsx-a11y": "6.7.1",
-		"eslint-plugin-mdx": "^2.1.0",
-		"eslint-plugin-react": "^7.32.1",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jest": "^28.6.0",
+		"eslint-plugin-jsx-a11y": "^6.9.0",
+		"eslint-plugin-mdx": "^3.1.5",
+		"eslint-plugin-react": "^7.34.3",
 		"jest": "29.0.0",
+		"prettier": "^3.3.2",
 		"ttypescript": "^1.5.15",
 		"typescript-transform-paths": "^3.4.6"
 	},
 	"dependencies": {
 		"@types/yargs": "^17.0.24",
-		"ansi-colors": "4.1.1",
-		"bluebird": "3.5.5",
+		"ansi-colors": "^4.1.3",
+		"bluebird": "^3.7.2",
 		"change-case": "^4.1.2",
 		"cosmiconfig": "^9.0.0",
 		"debug": "4.1.1",
-		"dot": "1.1.2",
-		"filenamify": "2.1.0",
+		"dot": "^1.1.3",
 		"find-up": "3.0.0",
 		"inflection": "^2.0.1",
 		"inquirer": "6.2.2",
 		"is": "3.3.0",
 		"memfs": "^4.2.1",
-		"minimatch": "3.0.4",
+		"minimatch": "^9.0.5",
 		"npm-paths": "^2.0.0",
-		"prettier": "^3.0.3",
-		"prettyjson-256": "1.5.18",
+		"prettyjson-256": "^1.6.5",
 		"strip-ansi": "6.0.0",
 		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.4",
