--- a/docs/package.json
+++ b/docs/package.json
@@ -19,9 +19,7 @@
 		"@docusaurus/preset-classic": "2.4.1",
 		"@docusaurus/theme-live-codeblock": "2.4.1",
 		"@docusaurus/theme-mermaid": "2.4.1",
-		"@fortawesome/fontawesome-svg-core": "^6.4.0",
-		"@fortawesome/free-solid-svg-icons": "^6.4.0",
-		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@mdx-js/react": "^1.6.22",
 		"@monaco-editor/react": "^4.5.1",
 		"@react-spring/web": "^9.7.3",
@@ -33,12 +31,14 @@
 		"raw-loader": "^4.0.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^5.2.1",
 		"react-waypoint": "^10.3.0",
 		"templates-mo": "../"
 	},
 	"devDependencies": {
 		"@docusaurus/eslint-plugin": "^2.4.1",
 		"@docusaurus/module-type-aliases": "2.4.1",
+		"@iconify/react": "^5.0.1",
 		"@tsconfig/docusaurus": "^1.0.5",
 		"eslint": "^8.43.0",
 		"eslint-plugin-react": "^7.32.2",
