--- a/docs/package.json
+++ b/docs/package.json
@@ -19,6 +19,7 @@
 		"@docusaurus/preset-classic": "2.4.1",
 		"@docusaurus/theme-live-codeblock": "2.4.1",
 		"@docusaurus/theme-mermaid": "2.4.1",
+		"@iconify/react": "^5.0.1",
 		"@mdx-js/react": "^1.6.22",
 		"@monaco-editor/react": "^4.5.1",
 		"@react-spring/web": "^9.7.3",
