--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
 		"eslint-plugin-mdx": "^3.1.5",
 		"eslint-plugin-react": "^7.34.3",
 		"jest": "29.0.0",
-		"prettier": "^3.3.2",
+		"prettier": "^3.3.3",
 		"ttypescript": "^1.5.15",
 		"typescript-transform-paths": "^3.4.6"
 	},
@@ -105,6 +105,7 @@
 		"strip-ansi": "6.0.0",
 		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.4",
-		"yargs": "17.7.2"
+		"yargs": "17.7.2",
+		"zx": "^8.1.4"
 	}
 }
