--- a/docs/package.json
+++ b/docs/package.json
@@ -15,32 +15,33 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
-		"@docusaurus/core": "2.4.1",
-		"@docusaurus/preset-classic": "2.4.1",
-		"@docusaurus/theme-live-codeblock": "2.4.1",
-		"@docusaurus/theme-mermaid": "2.4.1",
+		"@docusaurus/core": "3.5.1",
+		"@docusaurus/preset-classic": "3.5.1",
+		"@docusaurus/theme-live-codeblock": "3.5.1",
+		"@docusaurus/theme-mermaid": "3.5.1",
 		"@iconify/react": "^5.0.1",
-		"@mdx-js/react": "^1.6.22",
+		"@mdx-js/react": "^3.0.0",
 		"@monaco-editor/react": "^4.5.1",
 		"@react-spring/web": "^9.7.3",
 		"antd": "^5.8.2",
 		"clsx": "^1.2.1",
 		"dot": "^1.1.3",
 		"inflection": "^2.0.1",
-		"prism-react-renderer": "^1.3.5",
+		"prism-react-renderer": "^2.1.0",
 		"raw-loader": "^4.0.2",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "^18.2.0",
+		"react-dom": "18.2.0",
 		"react-waypoint": "^10.3.0",
 		"templates-mo": "../"
 	},
 	"devDependencies": {
-		"@docusaurus/eslint-plugin": "^2.4.1",
-		"@docusaurus/module-type-aliases": "2.4.1",
-		"@tsconfig/docusaurus": "^1.0.5",
+		"@docusaurus/eslint-plugin": "^3.5.1",
+		"@docusaurus/module-type-aliases": "3.5.1",
+		"@docusaurus/tsconfig": "3.0.0",
 		"eslint": "^8.43.0",
 		"eslint-plugin-react": "^7.32.2",
-		"typescript": "^4.7.4"
+		"typescript": "~5.2.2",
+		"@types/react": "^18.2.29"
 	},
 	"browserslist": {
 		"production": [
@@ -55,6 +56,6 @@
 		]
 	},
 	"engines": {
-		"node": ">=16.14"
+		"node": ">=18.0"
 	}
 }
