--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -7,7 +7,7 @@
 		"paths": {
 			"@tps/*": ["./src/*"],
 			"@test/*": ["./__tests__/*"],
-			"templates-mo": ["./"]
+			"templates-mo/*": ["./*"]
 		}
 	},
 	"include": ["./src/**/*", "./__tests__/**/*"],
