--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"email": "marcellino.ornelas@gmail.com"
 	},
 	"engines": {
-		"node": ">=16.7.0"
+		"node": ">=18.18"
 	},
 	"homepage": "https://marcellino-ornelas.github.io/templates/",
 	"bin": {
@@ -94,6 +94,7 @@
 		"cosmiconfig": "^9.0.0",
 		"debug": "4.1.1",
 		"dot": "^1.1.3",
+		"execa": "^9.3.1",
 		"find-up": "3.0.0",
 		"inflection": "^2.0.1",
 		"inquirer": "6.2.2",
