--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"tps": "./lib/cli/index.js"
 	},
 	"scripts": {
-		"code:build": "ttsc",
+		"code:build": "tspc",
 		"code:dev": "npm run code:build -- -w",
 		"code:prod": "npm run code:build",
 		"test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init",
@@ -83,7 +83,7 @@
 		"eslint-plugin-react": "^7.34.3",
 		"jest": "29.0.0",
 		"prettier": "^3.3.2",
-		"ttypescript": "^1.5.15",
+		"ts-patch": "^3.2.1",
 		"typescript": "^5.5.4",
 		"typescript-transform-paths": "^3.4.6"
 	},
