--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
 		"eslint-plugin-react": "^7.34.3",
 		"jest": "29.0.0",
 		"prettier": "^3.3.3",
+		"ts-node": "^10.9.2",
 		"ts-patch": "^3.2.1",
+		"tsx": "^4.19.0",
 		"typescript": "^5.5.4",
 		"typescript-transform-paths": "^3.4.6"
 	},
