--- a/package.json
+++ b/package.json
@@ -108,7 +108,6 @@
 		"prettyjson-256": "^1.6.5",
 		"strip-ansi": "6.0.0",
 		"ts-jest": "^29.0.5",
-		"yargs": "17.7.2",
-		"zx": "^8.1.4"
+		"yargs": "17.7.2"
 	}
 }
