--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 	"devDependencies": {
 		"@docusaurus/eslint-plugin": "^2.4.1",
 		"@types/bluebird": "^3.5.42",
+		"@types/cross-spawn": "^6.0.6",
 		"@types/dot": "^1.1.7",
 		"@types/inquirer": "^9.0.3",
 		"@types/is": "^0.0.21",
@@ -95,6 +96,7 @@
 		"bluebird": "^3.7.2",
 		"change-case": "^4.1.2",
 		"cosmiconfig": "^9.0.0",
+		"cross-spawn": "^7.0.3",
 		"debug": "4.1.1",
 		"dot": "^1.1.3",
 		"execa": "^9.3.1",
