--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 	"devDependencies": {
 		"@docusaurus/eslint-plugin": "^2.4.1",
 		"@types/bluebird": "^3.5.42",
+		"@types/cross-spawn": "^6.0.6",
 		"@types/dot": "^1.1.7",
 		"@types/inquirer": "^9.0.3",
 		"@types/is": "^0.0.21",
@@ -82,8 +83,9 @@
 		"eslint-plugin-mdx": "^3.1.5",
 		"eslint-plugin-react": "^7.34.3",
 		"jest": "29.0.0",
-		"prettier": "^3.3.2",
+		"prettier": "^3.3.3",
 		"ts-patch": "^3.2.1",
+		"tsx": "^4.19.0",
 		"typescript": "^5.5.4",
 		"typescript-transform-paths": "^3.4.6"
 	},
@@ -93,6 +95,7 @@
 		"bluebird": "^3.7.2",
 		"change-case": "^4.1.2",
 		"cosmiconfig": "^9.0.0",
+		"cross-spawn": "^7.0.3",
 		"debug": "4.1.1",
 		"dot": "^1.1.3",
 		"find-up": "3.0.0",
