--- a/.tps/express-app/default/package.json
+++ b/.tps/express-app/default/package.json
@@ -3,9 +3,11 @@
 	"version": "1.0.0",
 	"description": "",
 	"type": "module",
-	"main": "app.js",
+	"main": "src/app.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start:dev": "nodemon",
+		"start": "node"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,5 +24,8 @@
 		"helmet": "^7.1.0",
 		"morgan": "^1.10.0",
 		"winston": "^3.14.2"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.7"
 	}
 }
