--- a/.tps/express-app/default/package.json
+++ b/.tps/express-app/default/package.json
@@ -6,8 +6,8 @@
 	"main": "src/app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start:dev": "nodemon",
-		"start": "node"
+		"start:dev": "nodemon src/app.js",
+		"start": "node src/app.js"
 	},
 	"keywords": [],
 	"author": "",
