--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
 		"code:dev": "npm run code:build -- -w",
 		"code:prod": "npm run code:build",
 		"test:run:init": "npm run test:jest -- --runInBand --testPathPattern cli/init",
-		"test:core": "./.bin/ts ./.bin/generate-test-templates && npm run test:jest -- --testPathIgnorePatterns \"/.*/cli/.*\"",
+		"test:core": "npm run test:gen && npm run test:jest -- --testPathIgnorePatterns \"/.*/cli/.*\"",
+		"test:gen": "./.bin/ts ./.bin/generate-test-templates",
 		"test:jest": "jest",
 		"test:init": "npm run code:build && echo 'built' && INIT_ONLY=1 ./.bin/run-test",
 		"typecheck": "tsc --noEmit",
