--- a/package.json
+++ b/package.json
@@ -109,7 +109,6 @@
 		"prettyjson-256": "^1.6.5",
 		"strip-ansi": "6.0.0",
 		"ts-jest": "^29.0.5",
-		"yargs": "17.7.2",
-		"zod": "^3.23.8"
+		"yargs": "17.7.2"
 	}
 }
