--- a/docs/package.json
+++ b/docs/package.json
@@ -32,16 +32,17 @@
 		"react": "^18.2.0",
 		"react-dom": "18.2.0",
 		"react-waypoint": "^10.3.0",
-		"templates-mo": "../"
+		"templates-mo": "../",
+		"tps-ai": "^1.0.0"
 	},
 	"devDependencies": {
 		"@docusaurus/eslint-plugin": "^3.5.1",
 		"@docusaurus/module-type-aliases": "3.5.1",
 		"@docusaurus/tsconfig": "3.0.0",
+		"@types/react": "^18.2.29",
 		"eslint": "^8.43.0",
 		"eslint-plugin-react": "^7.32.2",
-		"typescript": "~5.2.2",
-		"@types/react": "^18.2.29"
+		"typescript": "~5.2.2"
 	},
 	"browserslist": {
 		"production": [
