--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 		"typescript-transform-paths": "^3.4.6"
 	},
 	"dependencies": {
+		"@dotenvx/dotenvx": "^1.36.0",
 		"@types/yargs": "^17.0.24",
 		"ansi-colors": "^4.1.3",
 		"bluebird": "^3.7.2",
