--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "templates-mo",
 	"version": "1.2.12",
-	"description": "Templates is a powerful filesystem generator that aims to simplify the process of getting started with and maintaining code applications",
+	"description": "Templates is a scaffolding framework that makes code generation simple, dynamic, and reusable. Generate files, parts of your app, or whole project structures—without the repetitive copy-pasting",
 	"main": "lib/templates/index.js",
 	"keywords": [
 		"web",
